src/test/ui/parser/keyword-if-as-identifier.stderr
error: expected pattern, found keyword `if`
  --> $DIR/keyword-if-as-identifier.rs:4:9
   |
LL |     let if = "foo"; //~ error: expected pattern, found keyword `if`
   |         ^^ expected pattern

error: aborting due to previous error

